2008-10-11  Adam Schreiber  <sadam@clemson.edu>

    * * gkr/seahorse-gkr-commands.c:
    * gkr/seahorse-gkr-commands.vala:
    * gkr/vala-build.stamp: Revert 2574
    * po/POTFILES.in: Add src/seahorse-viewer.c.
    * gkr/Makefile.am:
    * gkr/seahorse-gkr-commands.c:
    * gkr/seahorse-gkr-commands.vala:
    * gkr/vala-build.stamp: Use ngettext. Fixes bug #554933
    * po/POTFILES.skip: Remove src/seahorse-viewer.c.  Fixes bug #554937

2008-09-25  Adam Schreiber  <sadam@clemson.edu>

    * src/vala-build.stamp:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-results.vala: Fix crasher part of bug #553648

=== seahorse 2.24.0 ===

2008-09-20  Stef Walter  <stef@memberwebs.com>

	* NEWS:
	* configure.in:
	* README: Release version 2.24.0

2008-09-15  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-passphrase.c: Some tweaks to the password
	prompt window, including allowing minimizing to release the 
	keyboard grab.

2008-09-14  Stef Walter  <stef@memberwebs.com>

	* daemon/seahorse-daemon.c:
	* daemon/seahorse-hkp-server.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-validity.c:
	* pgp/seahorse-gpg-options.c:
	* pgp/seahorse-gpgme-io.c:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-ssh-askpass.c: Fix compiler warnings
	for gcc 4.3. 
	
2008-09-14  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-key-manager-store.c: Disconnect from 'sort-changed'
	when closing down a key manager window. This prevents gconf
	notifications after window is gone away. See bug #546686
	
2008-09-14  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-widget.c: Ignore erroneous negative
	window sizes. 
	
2008-09-14  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-set-model.c:
	* pkcs11/seahorse-pkcs11-certificate.vala:
	* src/seahorse-key-manager-store.c: Fix problems with validity
	and trust columns being the wrong type in the tree model.
	
2008-09-14  Stef Walter  <stef@memberwebs.com>
