@@ -1,3 +1,8 @@
+2008-10-18  Stef Walter  <stef@memberwebs.com>
+
+	* libcryptui/cryptui-key-store.c: cryptui_key_store_set_selected_key 
+	used wrong iter. Fixes bug #556187. Patch by Philip Withnall
+
 2008-10-11  Adam Schreiber  <sadam@clemson.edu>
 
     * * gkr/seahorse-gkr-commands.c:
